# Clawvibe

./: .gitignore  LICENSE  README.md  context_export.md  findings.md  progress.md  pyproject.toml  task_plan.md  初稿.md  可落地方案.md  开发任务清单.md  技术方案.md  比赛论坛投稿初稿.md  比赛论坛高分文章模板.md  项目框架.md
app/: __init__.py  analyzer.py  intake.py  models.py  repo_reader.py  reporter.py
diagrams/: clawvibe-framework.drawio  zcf-case-flow.drawio
skills/openclaw-repo-troubleshooter-en/: SKILL.md
skills/openclaw-repo-troubleshooter-en/agents/: openai.yaml
skills/openclaw-repo-troubleshooter-en/references/: invocation.md  output-contract.md  project-layout.md
skills/openclaw-repo-troubleshooter-en/scripts/: analyze_repo.py  run-skill.cmd  run-skill.sh
skills/openclaw-repo-troubleshooter-zh/: SKILL.md
skills/openclaw-repo-troubleshooter-zh/agents/: openai.yaml
skills/openclaw-repo-troubleshooter-zh/references/: invocation.md  output-contract.md  project-layout.md
skills/openclaw-repo-troubleshooter-zh/scripts/: analyze_repo.py  run-skill.ps1
skills/repo-troubleshooter-zh/: SKILL.md
skills/repo-troubleshooter-zh/agents/: openai.yaml
skills/repo-troubleshooter-zh/app/: __init__.py  main.py  pipeline.py  reproducer.py
skills/repo-troubleshooter-zh/references/: invocation.md  output-contract.md  project-layout.md
skills/repo-troubleshooter-zh/scripts/: analyze_repo.py  run-skill.cmd  run-skill.ps1  run-skill.sh
