[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-claw"
version = "0.1.0"
description = "A real-data OpenClaw troubleshooting assistant for unfamiliar repositories."
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
repo-claw = "app.main:main"

[tool.setuptools]
packages = ["app"]

